fix(table): thead and tbody missed alignment inheritance

--- a/src/definitions/collections/table.less
+++ b/src/definitions/collections/table.less
@@ -48,6 +48,11 @@
   text-align: inherit;
   vertical-align: inherit;
 }
+.ui.table thead,
+.ui.table tbody {
+  text-align: inherit;
+  vertical-align: inherit;
+}
 
 /*******************************
              Parts
